Bug 127993 - Correct word in spell check is greyed out in 6.3.2.2. making it difficult to read
Summary: Correct word in spell check is greyed out in 6.3.2.2. making it difficult to ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-10-07 03:41 UTC by Nick Mallory
Modified: 2019-11-08 16:32 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of problem (89.26 KB, image/png)
2019-10-07 03:43 UTC, Nick Mallory
Details
screenshot (137.07 KB, image/png)
2019-10-08 17:18 UTC, Oliver Brinzing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Mallory 2019-10-07 03:41:25 UTC
Description:
The spellcheck dialogue box in 6.3.2.2. now has the most likely spelling of the word greyed out.  Far from highlighting it, this makes it difficult to read for people with less than perfect sight, and simply annoying for the rest of us.  Please return it to its former state - with no highlighting - as this was far more practical.  Flashy design should not trump userbility and this change accomplished nothing but making spell check harder to use.  

Steps to Reproduce:
1. Mis-spell a word.
2. Use the spell checker.
3. See the most likely replacement for the mis-spelled word covered in a grey strip.

Actual Results:
The most likely choice is made much harder to read, rather than easier to see.

Expected Results:
It should not cover up the favoured word with a grey strip which makes it harder to read.  Instead the contrast should be made much clearer, allowing it to be read easily and chosen with a single click.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
If it's not broken, don't fix it.
Comment 1 Nick Mallory 2019-10-07 03:43:10 UTC
Created attachment 154789 [details]
Screenshot of problem

The highlight makes the word in question more difficult to read, rather than easier to pick out.
Comment 2 Durgapriyanka 2019-10-07 14:24:28 UTC
Thank you for reporting the bug. 

I cannot reproduce the bug in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

The spell check dialog box doesn't work in 

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 3 Oliver Brinzing 2019-10-07 17:24:03 UTC
reproducible with:

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

but *not* reproducible with:

Version: 6.2.7.1 (x64)
Build-ID: 23edc44b61b830b7d749943e020e96f5a7df63bf
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc:
Comment 4 Xisco Faulí 2019-10-08 14:56:47 UTC
I believe it's just the way your OS shows lists... The dialog has been recently welded to look native
Comment 5 Oliver Brinzing 2019-10-08 17:18:38 UTC
Created attachment 154845 [details]
screenshot

no, it's different
Comment 6 Aron Budea 2019-11-03 01:01:20 UTC
This could be reproduced in Linux, eg. with gen VCL backend. When the listbox is in focus, it shows the right (dark) color, but as soon as it loses focus, it changes to a pale color. This didn't happen in 6.2.

Bibisected to the following commit using repo bibisect-linux-64-6.3, it's a backported commit, so I'm listing the original. Adding Cc: to Caolán McNamara, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5261417cbb3051b812164838d19c0f748573df45
author		Caolán McNamara <caolanm@redhat.com>	2019-06-14 21:56:44 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-06-21 21:33:30 +0200

weld SpellDialog
Comment 7 Caolán McNamara 2019-11-04 10:36:39 UTC
In 6.2 it was a ListBox, now its a TreeView. The TreeViews default to WB_HIDESELECTION where when a TreeView doesn't have focus the highlighted entry is highlighted lighter than when it has focus.

https://gerrit.libreoffice.org/#/c/81995/ would make the TreeView behave the same as a ListBox did and appear equally highlighted whether it has focus or not
Comment 8 Heiko Tietze 2019-11-05 15:43:23 UTC
(In reply to Caolán McNamara from comment #7)
> In 6.2 it was a ListBox, now its a TreeView. The TreeViews default to
> WB_HIDESELECTION where when a TreeView doesn't have focus the highlighted
> entry is highlighted lighter than when it has focus.
> 
> https://gerrit.libreoffice.org/#/c/81995/ would make the TreeView behave the
> same as a ListBox did and appear equally highlighted whether it has focus or
> not

To lighten up the non-focused entry complies with the OS/DE and we shouldn't just ignore it, although I don't see a tree without focus except styles which is some dirty hack. 
Is there any good reason to use a tree for this list?
Comment 9 Caolán McNamara 2019-11-05 16:06:06 UTC
All such lists are backed by the same "treeview" implementation now while in the past there was two of them in a random pick and mix. There isn't the option to arbitrarily pick one in certain circumstances anymore.

Plenty of treeviews can be seen in their unfocused state in the ui at the moment, e.g. with the gen backend tools->options and press tab to get out of the tree into the page beside it, or tools->autocorrect options->localized options, click to select a row in that treeview and tab to go to another widget and the highlighted line becomes less highlighted.

I could of course put the focus into the spellchecking treeview by default so it would be brightly highlighted by default until the user moved the focus out of it
Comment 10 Heiko Tietze 2019-11-08 09:36:25 UTC
Let's go with your patch, +2.
Comment 11 Commit Notification 2019-11-08 11:33:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fbdeeb4dace3eb1bbf49fa4cc598ec174fbc80b7

tdf#127993 remove default WB_HIDESELECTION

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2019-11-08 11:37:12 UTC
fixed in master, backport to 6-3 in gerrit
Comment 13 Commit Notification 2019-11-08 16:32:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/2b330177853ccaaf2abf496fd83d809932b3d486

tdf#127993 remove default WB_HIDESELECTION

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.