tdf#127993 remove default WB_HIDESELECTION

so the highlighted entries in a TreeView doesn't appear different
when it has focus vs not having focus.

Change-Id: I823fc0cc503161ee93845eb0fb7458a41344d608
Reviewed-on: https://gerrit.libreoffice.org/82285
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>